@@ -30,6 +30,8 @@ export(generate_stdzied_design_matrix)
 export(greedy_orthogonalization_curation)
 export(greedy_orthogonalization_curation2)
 export(hadamardExperimentalDesign)
+export(imbalanced_block_designs)
+export(imbalanced_complete_randomization)
 export(initBinaryMatchExperimentalDesignSearch)
 export(initBinaryMatchFollowedByGreedyExperimentalDesignSearch)
 export(initBinaryMatchFollowedByRerandomizationDesignSearch)
