@@ -1,6 +1,8 @@
 version 1.5.6
 * Method that calculates asymmetric cost allocation
 * Greedy Pair Switching algorithm that supports unequal number of treatments and controls
+* Imbalanced (unequal allocation) Completely Random Designs
+* Imbalanced (unequal allocation) Block Designs
 
 version 1.5.5
 
